--- a/5_Python.ipynb
+++ b/5_Python.ipynb
@@ -156,41 +156,82 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "X6TngBwJZzFQ"
+        "id": "X6TngBwJZzFQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9e4502c3-ddda-4737-9f2c-d78817a9766c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3, 4],\n",
+              "       [4, 5, 6, 7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
+        "import numpy as np\n",
         "a=np.array([(1,2,3,4),(4,5,6,7)])\n",
         "a"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "NijWgjYlZzFQ"
+        "id": "NijWgjYlZzFQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "41620311-18e5-4e75-9ce8-12a7f906aca2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8\n"
+          ]
+        }
+      ],
       "source": [
         "print(a.size)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "VKnaABs9ZzFR"
+        "id": "VKnaABs9ZzFR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ee79ed27-66e8-4199-e475-dd3ff73d283e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(2, 4)\n"
+          ]
+        }
+      ],
       "source": [
         "print(a.shape)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "B1EYIclMZzFS"
       },
@@ -201,89 +242,62 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "xHMboIPFZzFS"
+        "id": "xHMboIPFZzFS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aabb034c-06a5-438c-c0c0-ea7a8f1a5d25"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3 4]\n",
+            " [4 5 6 7]]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
       "source": [
-        "print(a)"
+        "print(a)\n",
+        "a[0,2]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "mocSN1S5ZzFT"
+        "id": "mocSN1S5ZzFT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db15df1f-1ce8-4885-98c5-68483974ec13"
       },
-      "outputs": [],
-      "source": [
-        "a=np.array([(1,2,3,4),(4,5,6,7)])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Om56YiJnZzFT"
-      },
-      "outputs": [],
-      "source": [
-        "a[0,2] ## Accessing values"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "q6sCpofdZzFU"
-      },
-      "outputs": [],
-      "source": [
-        "a=np.array([1,2,3,4])\n",
-        "print(a)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "vUa2DSyRZzFV"
-      },
-      "outputs": [],
-      "source": [
-        "a.min()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "j9Oc9TqjZzFV"
-      },
-      "outputs": [],
-      "source": [
-        "a.max()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "viBExOMqZzFW"
-      },
-      "outputs": [],
-      "source": [
-        "a.sum()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "_WRtrLuiZzFW"
-      },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3, 4],\n",
+              "       [4, 5, 6, 7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ],
       "source": [
         "a=np.array([(1,2,3,4),(4,5,6,7)])\n",
         "a"
@@ -291,22 +305,297 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
-        "id": "thnfLFh-ZzFX"
+        "id": "Om56YiJnZzFT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6528de7-1142-484f-dcc5-4f74d2ccedcb"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ],
+      "source": [
+        "a[0,2]\n",
+        "a[1,0] ## Accessing values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "q6sCpofdZzFU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d0c52ad8-60eb-4fdd-a4a3-af459b23d33f"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4]\n"
+          ]
+        }
+      ],
+      "source": [
+        "a=np.array([1,2,3,4])\n",
+        "print(a)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {
+        "id": "vUa2DSyRZzFV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "57d033a3-949d-4176-bb54-5194691d65fe"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ],
+      "source": [
+        "a.min()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "caJ7xVHSj4lg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NkUn5Z2Mj5JS",
+        "outputId": "5f9efb69-7028-48dc-da52-e331db0bd1c1"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(4,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {
+        "id": "j9Oc9TqjZzFV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7247cf66-d251-4320-ce72-3bbfbd49b6c4"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ],
+      "source": [
+        "a.max()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "viBExOMqZzFW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c10f595b-a50c-4c93-f47d-d15760c05ada"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ],
+      "source": [
+        "a.sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a\n",
+        "  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xo8-Fcu3k9np",
+        "outputId": "95f939d8-f557-402d-a81e-90a19a726143"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {
+        "id": "_WRtrLuiZzFW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4c702b57-c792-4b09-bc58-c7d8c6ac0a09"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3, 4],\n",
+              "       [4, 5, 6, 7]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ],
+      "source": [
+        "a=np.array([(1,2,3,4),(4,5,6,7)])\n",
+        "a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a.sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2n1jsuwLmXNR",
+        "outputId": "4ca5466a-1c7d-40b5-d3a0-23893bd88498"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {
+        "id": "thnfLFh-ZzFX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3ed5af92-04b6-4618-8b5a-e943c641dde7"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 5,  7,  9, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ],
       "source": [
         "a.sum(axis=0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "metadata": {
-        "id": "cLpojPRnZzFX"
+        "id": "cLpojPRnZzFX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f266e860-88ab-465e-b10b-b83438441664"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([10, 22])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ],
       "source": [
         "a.sum(axis=1)"
       ]
@@ -1142,7 +1431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "KjqhXVB2ZzFt"
       },
@@ -1156,7 +1445,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "EDbQrTjUZzFu"
       },
@@ -1167,7 +1456,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "sjlQyJBGZzFu",
         "colab": {
@@ -1208,7 +1497,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Wt0f7gjgZzFu",
         "colab": {
@@ -1255,7 +1544,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "WCSaRtgxZzFv",
         "colab": {
@@ -1294,7 +1583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "w2zQRzfYZzFv",
         "colab": {
@@ -1333,7 +1622,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "xYqGbWIBZzFw",
         "colab": {
@@ -1373,7 +1662,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "JNS9UKufZzFw",
         "colab": {
@@ -1413,7 +1702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "H1wmZpzXZzFw",
         "colab": {
