--- a/5_Python.ipynb
+++ b/5_Python.ipynb
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "X6TngBwJZzFQ",
         "colab": {
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "NijWgjYlZzFQ",
         "colab": {
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "VKnaABs9ZzFR",
         "colab": {
@@ -231,7 +231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "B1EYIclMZzFS"
       },
@@ -242,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "xHMboIPFZzFS",
         "colab": {
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "mocSN1S5ZzFT",
         "colab": {
@@ -305,7 +305,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "Om56YiJnZzFT",
         "colab": {
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "q6sCpofdZzFU",
         "colab": {
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "vUa2DSyRZzFV",
         "colab": {
@@ -401,7 +401,7 @@
         "id": "NkUn5Z2Mj5JS",
         "outputId": "5f9efb69-7028-48dc-da52-e331db0bd1c1"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -417,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "j9Oc9TqjZzFV",
         "colab": {
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "viBExOMqZzFW",
         "colab": {
@@ -480,7 +480,7 @@
         "id": "xo8-Fcu3k9np",
         "outputId": "95f939d8-f557-402d-a81e-90a19a726143"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "_WRtrLuiZzFW",
         "colab": {
@@ -534,7 +534,7 @@
         "id": "2n1jsuwLmXNR",
         "outputId": "4ca5466a-1c7d-40b5-d3a0-23893bd88498"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "thnfLFh-ZzFX",
         "colab": {
@@ -576,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": null,
       "metadata": {
         "id": "cLpojPRnZzFX",
         "colab": {
@@ -597,7 +597,7 @@
         }
       ],
       "source": [
-        "a.sum(axis=1)"
+        "a.sum(axis=1)\n"
       ]
     },
     {
